[package]
name = "token-wrapper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_wrapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
mpl-token-auth-rules = { version = "1.3.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version="1.10.0", features=["no-entrypoint"] }
token-interface = { path = "../../token-interface" }
